3. code top header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,91 @@
     /* áp dụng cho tất cả phần tử */
     box-sizing: border-box;
 }
-html{
+
+:root {
+    font-size: #10375c;
+}
+
+html {
     font-size: 62.5%;
 }
 body{
     font-size: 1.6rem;
     font-family: "Sora", sans-serif;
+}
+
+/* =================== Common ============== */
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+.btn {
+    display: inline-block;
+    min-width: 205px;
+    line-height: 60px;
+    background:#2e80ce ;
+    color: #FFF;
+    text-align: center;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 400;
+    border-radius: 999px;
+}
+.btn:hover{
+    opacity:0.9;
+}
+/* ================ header =============== */
+.header {
+    /* background: var(--header-bg); */
+    background: #10375C;
+    min-height: 100vh;
+}
+
+.header-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.navbar__list {
+    display: flex;
+}
+.header__action--login,
+.navbar__link{
+    padding: 8px 21px;
+    color: #C9D2DA;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.75; /* 175% */
+}
+.navbar__link:hover,
+.navbar__link--active{
+    text-shadow: 1px 0 0 currentColor;
+    color:#fff;
+}
+.navbar__link--active::before{
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #fff;
+    border-radius: -99px;
+    top: -3px;
+    position: relative;
+    right:8px;
+}
+.header__action--signup{
+    min-width: 144px;
+    line-height: 44px;
+    font-size: 1.6rem;
+}
+.header__action--login{
+    margin-right: 7px;
 }
