--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,3 +239,56 @@ box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
     margin-top: 55px;
     
 }
+
+/* ====================== work ================= */
+.work{
+    background: #F6FBFF;
+    padding: 100px 0;
+}
+
+.work_desc{
+    width: 468px;
+}
+
+.work__list{
+    margin-top: 86px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 30px;
+}
+.work-item {
+    padding: 43px;
+    border-radius: 4px;
+    background: #fff;
+    border: 16px solid #EAF6FF;
+    transition: 0.25s;
+}
+
+.work-item:hover {
+    border-color:#2E80CE;
+    /*  lam hieu ung nhay len */
+    transform: translate(-16px)
+}
+
+.work-item__heading{
+    margin-top: 18px;
+    color: #10375C;
+    font-size: 2.6rem;
+    font-weight: 600;
+    line-height: 1.38; /* 138.462% */
+}
+
+.work-item__desc{
+    margin-top: 28px;
+    color: #575F66;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 1.75; /* 175% */
+}
+.work-item__more{
+    margin-top: 18px;
+    color: #2E80CE;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75; /* 175% */
+}
