--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,27 @@ a {
     font-weight: 300;
     line-height: 1.67; /* 166.667% */
 }
+.control__btn{
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #575F66;
+    background: #fff;
+    cursor: pointer;
+    transition: 0.25s;
+}
+.control__btn:hover{
+    background: #2E80CE;
+    border-color: #2E80CE;
+    color: #fff;
+}
+
+.control-icon--next{
+    rotate: 180deg;
+}
 /* ================ header =============== */
 .header {
     /* background: var(--header-bg); */
@@ -333,4 +354,67 @@ box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
 .about-content__btn{
     margin-top: 38px;
 }
+
+.control{
+    display: flex;
+    column-gap: 18px;
+    align-items: center;
+}
+/* ================= team =================== */
+.team{
+    padding: 85px 0; 
+}
+
+.team-header{
+    text-align: center;
+    margin: 0 auto;
+}
+.team__cta{
+    margin-top: 38px;
+}
+.team__list{
+    margin-top: 70px;
+    column-gap: 30px;
+    display: grid;
+    grid-template-columns:repeat(4, 1fr) ;
+}
+.team-item__thumb{
+    height: 290px;
+    max-width: 100%;
+    object-fit: cover;
+    display: block;
+    transition: 0.5s;
+}
+
+.team-item__img-bg{
+    border-radius: 6px;
+    background: #EAF6FF;
+    padding-top: 28px;
+    overflow: hidden;
+}
+
+.team-item:hover .team-item__thumb{
+    transform: scale(1.1);
+}
+
+.team-item__name{
+    color: #10375C;
+    text-align: center;
+    font-size: 1.6rem;
+    line-height: 1.75; /* 175% */
+}
+
+.team-item__desc{
+    color: #575F66;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.85; /* 185.714% */
+}
+
+.team__control{
+    margin-top: 38px;
+    justify-content: center;
+}
+
 
