--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,5 +416,47 @@ box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
     margin-top: 38px;
     justify-content: center;
 }
+/* ===================== install ===================== */
+.install__inner {
+    margin: 180px 0 85px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 70px;
+    height: 427px;
+    border-radius: 4px;
+    background: #2E80CE;
+}
 
+.install__img{
+    position: absolute;
+    bottom: 0;
+    width: 284px;
+    height: 522px;
+    /*  khong bi meo anh */
+    object-fit: cover;
+}
 
+.install__content{
+    max-width: 586px;
+}
+
+.install__heading{
+    color: #fff;
+    min-width: 489px;
+}
+.install__desc{
+    margin-top: 18px;
+    min-width: 586px;
+    color: #FFF;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.67; /* 166.667% */
+}
+.install__row{
+    margin-top: 38px;
+    display: flex;
+    column-gap: 28px;
+    align-items: center;
+}
