--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,6 +436,7 @@ box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
     height: 522px;
     /*  khong bi meo anh */
     object-fit: cover;
+    transition: 0.25s;
 }
 
 .install__content{
@@ -459,4 +460,97 @@ box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
     display: flex;
     column-gap: 28px;
     align-items: center;
+}
+/* ====================== blog ==================== */
+.blog{
+    padding: 85px 0;
+    background: #FFF;
+}
+
+.blog__inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.blog__content{
+    width: 40%;
+}
+.blog__heading{
+    min-width: 470px;
+}
+.blog__more{
+    margin-top: 28px ;
+    display: inline-block;
+    color: #10375C;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.56; /* 155.556% */
+    text-decoration-line: underline;
+    text-underline-offset: 5px;
+}
+.blog__control{
+    margin-top: 28px;
+    justify-content: flex-start;
+}
+
+.blog__list{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 30px;
+}
+.blog-item{
+    max-width: 270px;
+    border-radius: 12px;
+    border: 1px solid #E8EBEE;
+    background: #FFF;
+    overflow: hidden;
+    transform: 0.5s;
+}
+
+.blog-item:hover{
+    box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);
+    border-color: transparent;
+}
+
+.blog-item:hover .blog-item__thumb{
+    transform: scale(1.1);
+}
+
+.blog-item__thumb{
+    width: 270px;
+    height: 172px;
+    border-radius: 12px 12px 0px 0px;
+    object-fit: cover;
+    transition: 0.25s;
+}
+.blog-item__wrap{
+    height: 172px;
+    overflow: hidden;
+}
+.blog-item__body{
+    padding: 18px 22px;
+}
+.blog-item__heading{
+    color: #10375C;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1.63; /* 162.5% */
+}
+
+.blog-item__desc{
+    color: #575F66;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.72; /* 171.429% */
+}
+.blog-item__more{
+    display: inline-block;
+    margin-top: 12px;
+    color: #10375C;
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+.blog-item__more:hover{
+    color:#2E80CE;
 }
